--- a/dread_ds/examples/example.conf
+++ b/dread_ds/examples/example.conf
@@ -1,6 +1,5 @@
 # Example config file
 
-
 debug = 4 # verbosity of debug output. 0 = quiet
 
 genetic_dims = 3
@@ -13,14 +12,14 @@ dispersal_min = 0.123
 
 [env]
 # First environment dimension (e.g. temperature)
-grid = temperature.asc
+grid = examples/temperature.asc
 ramp = 1.23		# change per time step
 sine_period = 123	# sinusoidal chnage wavelength in timesteps
 sine_amplitude = 0.123
 sine_offset = 0.0	# 0 = sin(), 0.25 = cos()
 
 # Second environment dimension (e.g. rainfall)
-grid = rainfall.asc
+grid = examples/rainfall.asc
 ramp = 2.34
 sine_period = 123
 sine_amplitude = 0.123
