Fleshing out initial species seeding

--- a/dread_ds/src/CMakeLists.txt
+++ b/dread_ds/src/CMakeLists.txt
@@ -7,7 +7,8 @@ include_directories(${Boost_INCLUDE_DIR}  ${GDAL_INCLUDE_DIR})
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_library(dread_ds STATIC
-  model-config.cpp environment.cpp species.cpp model.cpp simulation.cpp)
+  model-config.cpp deme.cpp environment.cpp species.cpp
+  model.cpp simulation.cpp)
 target_link_libraries(dread_ds ${Boost_LIBRARIES} ${GDAL_LIBRARY})
 
 add_executable(test_dd test.cpp)
