First tentative working version. Needs testing and per-step output.

--- a/dread_ds/examples/example.conf
+++ b/dread_ds/examples/example.conf
@@ -1,13 +1,13 @@
 # Example config file
 
-debug = 4 # verbosity of debug output. 0 = quiet
+debug = 2 # verbosity of debug output. 0 = quiet,  max = 4
 
 genetic_dims = 3
-gene_drift_rate = 1.23
-gene_flow_max_distance = 5
-gene_flow_threshold = 0.1
-niche_evolution_rate = 0.3
-dispersal_min = 0.123
+gene_drift_rate = 1.0 # std. dev. of Brownian motion # FIXME  default in source
+gene_flow_max_distance = 5  # where gene flow probability drops to zero
+gene_flow_threshold = 0.001 # FIXME default in source
+niche_evolution_rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
+dispersal_min = 0.2 # dispersal at max dispersal distance
 
 
 [env]
