Allow output filename prefix. Updated documentation. Renamed librray and executable

--- a/dread_ds/Makefile
+++ b/dread_ds/Makefile
@@ -13,7 +13,7 @@ TAGS: src/*
 # R package
 rp: r-package/$(R_PKG_TGZ)
 
-r-package/$(R_PKG_TGZ): src/*.h src/libdread_ds.a r-package/dreadds/src/*.cpp
+r-package/$(R_PKG_TGZ): src/*.h src/libdreadds.a r-package/dreadds/src/*.cpp
 	cd r-package/ && DREAD_DS_SRC=$$(cd ../src/ && pwd) R CMD build dreadds
 	DREAD_DS_SRC=$$(cd src && pwd) R --no-save <<< 'install.packages("r-package/$(R_PKG_TGZ)", repos = NULL)'
 
