--- a/dread_ds/examples/example.conf
+++ b/dread_ds/examples/example.conf
@@ -1,4 +1,13 @@
-# Example config file
+### Example config file
+#
+# Comments are prefixed with a #-character and can be inserted anywhere.
+# [something] starts a section.
+# key=value specifies a value for an option. Within a [section], this is
+# equivalent to the command line syntax section.key=value.
+# Leading and trailing whitespace is stripped from both keys and values.
+# There is no quoting syntax, thus no way to specify a literal
+# #-character, nor explicit leading or trailing spaces. See
+# https://www.boost.org/doc/libs/1_68_0/doc/html/program_options/overview.html#id-1.3.31.5.10.2
 
 debug = 2 # verbosity of debug output. 0 = quiet,  max = 4
 
@@ -8,13 +17,13 @@ gene_flow_max_distance = 5  # where gene flow probability drops to zero
 gene_flow_threshold = 0.001 # FIXME default in source
 niche_evolution_rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
 dispersal_min = 0.2 # dispersal at max dispersal distance
-
+output_file_prefix = out # output filenames start with this
 
 [env]
 # First environment dimension (e.g. temperature)
 grid = examples/temperature.asc
 ramp = 1.23		# change per time step
-sine_period = 123	# sinusoidal chnage wavelength in timesteps
+sine_period = 123	# sinusoidal change wavelength in timesteps
 sine_amplitude = 0.123
 sine_offset = 0.0	# 0 = sin(), 0.25 = cos()
 
