--- a/dread_ds/src/CMakeLists.txt
+++ b/dread_ds/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 3.0)
-project(dread_ds)
+project(dreadds)
 find_package (Boost 1.64 COMPONENTS program_options REQUIRED)
 find_package (GDAL REQUIRED)
 
@@ -7,14 +7,16 @@ include_directories(${Boost_INCLUDE_DIR} ${GDAL_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-add_library(dread_ds STATIC
+add_library(dreadds STATIC
   model-config.cpp deme.cpp environment.cpp species.cpp
   model.cpp simulation.cpp)
-target_link_libraries(dread_ds ${GDAL_LIBRARY} Boost::program_options)
+target_link_libraries(dreadds ${GDAL_LIBRARY} Boost::program_options)
 
-add_executable(test_dd test.cpp)
-target_link_libraries(test_dd
-	dread_ds
-	${GDAL_LIBRARY}
-	Boost::program_options)
-set_property(TARGET dread_ds test_dd PROPERTY CXX_STANDARD 11)
+add_executable(dreadds-bin dreadds.cpp)
+set_target_properties(dreadds-bin PROPERTIES OUTPUT_NAME dreadds)
+target_link_libraries(dreadds-bin
+  dreadds
+  ${GDAL_LIBRARY}
+  Boost::program_options)
+
+set_property(TARGET dreadds dreadds-bin PROPERTY CXX_STANDARD 11)
