Allow configuration options to be overridden by command line arguments

--- a/dread_ds/examples/example.conf
+++ b/dread_ds/examples/example.conf
@@ -9,37 +9,37 @@
 # #-character, nor explicit leading or trailing spaces. See
 # https://www.boost.org/doc/libs/1_68_0/doc/html/program_options/overview.html#id-1.3.31.5.10.2
 
-debug = 2 # verbosity of debug output. 0 = quiet,  max = 4
+verbosity = 2 # verbosity of log output. 0 = quiet, max = 4. Default = 1
 
-genetic_dims = 3
-gene_drift_rate = 1.0 # std. dev. of Brownian motion # FIXME  default in source
-gene_flow_max_distance = 5  # where gene flow probability drops to zero
-gene_flow_threshold = 0.001 # FIXME default in source
-niche_evolution_rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
-dispersal_min = 0.2 # dispersal at max dispersal distance
-output_file_prefix = out # output filenames start with this
+genetic-dims = 3
+gene-drift-rate = 1.0 # std. dev. of Brownian motion # FIXME  default in source
+gene-flow-max-distance = 5  # where gene flow probability drops to zero
+gene-flow-threshold = 0.001 # FIXME default in source
+niche-evolution-rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
+dispersal-min = 0.2 # dispersal at max dispersal distance
+output-file-prefix = out # output filenames start with this
 
 [env]
 # First environment dimension (e.g. temperature)
 grid = examples/temperature.asc
 ramp = 1.23		# change per time step
-sine_period = 123	# sinusoidal change wavelength in timesteps
-sine_amplitude = 0.123
-sine_offset = 0.0	# 0 = sin(), 0.25 = cos()
+sine-period = 123	# sinusoidal change wavelength in timesteps
+sine-amplitude = 0.123
+sine-offset = 0.0	# 0 = sin(), 0.25 = cos()
 
 # Second environment dimension (e.g. rainfall)
 grid = examples/rainfall.asc
 ramp = 2.34
-sine_period = 123
-sine_amplitude = 0.123
-sine_offset = 0.0
+sine-period = 123
+sine-amplitude = 0.123
+sine-offset = 0.0
 
 
 [species]
 # First species
 niche = 21, 220 # one value for each environment layer
-niche_breadth = 5, 40 # one value for each environment layer
-max_dispersal_radius = 5
+niche-breadth = 5, 40 # one value for each environment layer
+max-dispersal-radius = 5
 # Initial bounding rectangle
 north = 700
 south = 500
@@ -48,8 +48,8 @@ west = 123
 
 # Second species
 niche = 23, 34
-niche_breadth = 2, 4
-max_dispersal_radius = 5
+niche-breadth = 2, 4
+max-dispersal-radius = 5
 north = 789
 south = 567
 east = 456
