Added grids2tsv utility

--- a/dread_ds/src/CMakeLists.txt
+++ b/dread_ds/src/CMakeLists.txt
@@ -20,3 +20,9 @@ target_link_libraries(dreadds-bin
   Boost::program_options)
 
 set_property(TARGET dreadds dreadds-bin PROPERTY CXX_STANDARD 11)
+
+
+add_executable(grids2tsv grids2tsv.cpp)
+target_link_libraries(grids2tsv
+  dreadds
+  ${GDAL_LIBRARY})
