Allow environment to be specified as time series of grids

--- a/dread_ds/examples/example.conf
+++ b/dread_ds/examples/example.conf
@@ -1,9 +1,25 @@
 ### Example config file
 #
 # Comments are prefixed with a #-character and can be inserted anywhere.
+#
+# key=value specifies a value for an option, equivalent to the
+# command-line arguemnt --key=value
+#
 # [something] starts a section.
-# key=value specifies a value for an option. Within a [section], this is
-# equivalent to the command line syntax section.key=value.
+#
+# Below a [section], key=value is equivalent to the command line
+# syntax --section.key=value.
+#
+# Options can be specified in any order. This includes those options
+# that are used to specify one or more sets of values in a
+# [section]. For these, the nth set is constructed from the nth
+# occurrences of its constituent options. In order to maintain
+# readability, it's probably best to group each set together as shown
+# below.
+#
+# Options on the command line override those in the config file. For
+# options that can be repeated, the entire list is overridden.
+#
 # Leading and trailing whitespace is stripped from both keys and values.
 # There is no quoting syntax, thus no way to specify a literal
 # #-character, nor explicit leading or trailing spaces. See
@@ -20,19 +36,40 @@ dispersal-min = 0.2 # dispersal at max dispersal distance
 output-file-prefix = out # output filenames start with this
 
 [env]
-# First environment dimension (e.g. temperature)
+# First environment dimension (e.g. temperature).
+#
+# This case illustrates the specification of an initial environment
+# grid that is uniformly modified at each time step by applying a
+# linear increase and a sinusoidal component.
+mode = ex # extrapolate from base environment
 grid = examples/temperature.asc
 ramp = 1.23		# change per time step
-sine-period = 123	# sinusoidal change wavelength in timesteps
+sine-period = 123	# sinusoidal change wavelength per time-step
 sine-amplitude = 0.123
 sine-offset = 0.0	# 0 = sin(), 0.25 = cos()
 
 # Second environment dimension (e.g. rainfall)
-grid = examples/rainfall.asc
-ramp = 2.34
-sine-period = 123
-sine-amplitude = 0.123
-sine-offset = 0.0
+#
+# This case illustrates the use of a time series of input environment
+# grids, each in ./examples/time-series/$n/rainfall.asc, where $n starts
+# at 200 (start-dir) and decreases by 10 (step-by). e.g.:
+# 200/rainfall.asc holds the rainfall for start-time (200000 years ago)
+# 190/rainfall.asc holds the rainfall for 190000 years ago
+mode = ts # environment available as time series
+ts-dir = examples/time-series
+start-dir = 200 # must be an integer
+step-by = -10 # corresponds to one time step. Used to determine each directory name.
+grid = rainfall.asc # use examples/time-series/$n/rainfall.asc, where $n = 200, 190, 180, ...
+
+# Alternatively, this too could be specified as a ramp + sine function
+# applied to a base environment.
+# e.g.
+# mode = ex
+# grid = examples/rainfall.asc
+# ramp = 2.34
+# sine-period = 123
+# sine-amplitude = 0.123
+# sine-offset = 0.0
 
 
 [species]
