--- a/dread_ds/src/CMakeLists.txt
+++ b/dread_ds/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 3.0)
 project(dreadds)
-find_package (Boost 1.64 COMPONENTS program_options REQUIRED)
+find_package (Boost 1.64
+  COMPONENTS program_options filesystem REQUIRED)
 find_package (GDAL REQUIRED)
 
 include_directories(${Boost_INCLUDE_DIR} ${GDAL_INCLUDE_DIR})
@@ -10,14 +11,18 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 add_library(dreadds STATIC
   model-config.cpp deme.cpp environment.cpp species.cpp
   output-file.cpp model.cpp simulation.cpp)
-target_link_libraries(dreadds ${GDAL_LIBRARY} Boost::program_options)
+target_link_libraries(dreadds
+  ${GDAL_LIBRARY}
+  Boost::program_options
+  Boost::filesystem)
 
 add_executable(dreadds-bin dreadds.cpp)
 set_target_properties(dreadds-bin PROPERTIES OUTPUT_NAME dreadds)
 target_link_libraries(dreadds-bin
   dreadds
   ${GDAL_LIBRARY}
-  Boost::program_options)
+  Boost::program_options
+  Boost::filesystem)
 
 add_executable(grids2tsv grids2tsv.cpp)
 target_link_libraries(grids2tsv
