Better implementation of environment time-series

--- a/dread_ds/examples/example.conf
+++ b/dread_ds/examples/example.conf
@@ -28,7 +28,7 @@
 verbosity = 2 # verbosity of log output. 0 = quiet, max = 3. Default = 1
 
 genetic-dims = 3
-gene-drift-rate = 1.0 # std. dev. of Brownian motion # FIXME  default in source
+gene-drift-rate = 1.0 # std. dev. of Brownian motion # FIXME  compile-time constant
 gene-flow-max-distance = 5  # where gene flow probability drops to zero
 gene-flow-threshold = 0.001 # FIXME default in source
 niche-evolution-rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
