Implemented random-cell and random-rectangle modes for initial species. Explicitly handle cells with no-data values

--- a/examples/example.conf
+++ b/examples/example.conf
@@ -3,7 +3,7 @@
 # Comments are prefixed with a #-character and can be inserted anywhere.
 #
 # key=value specifies a value for an option, equivalent to the
-# command-line arguemnt --key=value
+# command-line argument --key=value
 #
 # [something] starts a section.
 #
@@ -11,11 +11,12 @@
 # syntax --section.key=value.
 #
 # Options can be specified in any order. This includes those options
-# that are used to specify one or more sets of values in a
-# [section]. For these, the nth set is constructed from the nth
-# occurrences of its constituent options. In order to maintain
-# readability, it's probably best to group each set together as shown
-# below.
+# that are used to specify repeatable sets of values in a section,
+# such as [env] or [species]. For these cases, ordinal correspondence
+# of the repeatable options is used to form each set. In other words,
+# the nth set is constructed from the nth occurrences of its
+# constituent options. In order to maintain readability, it's probably
+# best to group each set together as shown below.
 #
 # Options on the command line override those in the config file. For
 # options that can be repeated, the entire list is overridden.
@@ -28,7 +29,7 @@
 verbosity = 2 # verbosity of log output. 0 = quiet, max = 3. Default = 1
 
 genetic-dims = 3
-gene-flow-max-distance = 5  # where gene flow probability drops to zero
+gene-flow-max-distance = 5  # gene-space distance where gene flow probability drops to zero
 niche-evolution-rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
 dispersal-min = 0.2 # dispersal at max dispersal distance
 output-file-prefix = out # output filenames start with this
@@ -72,20 +73,16 @@ grid = rainfall.asc # use examples/time-series/$n/rainfall.asc, where $n = 200, 
 
 [species]
 # First species
-niche = 21, 220 # one value for each environment layer
+niche-centre = 21, 220 # one value for each environment layer or 'random-cell'
 niche-breadth = 5, 40 # one value for each environment layer
-max-dispersal-radius = 5
-# Initial bounding rectangle
-north = 700
-south = 500
-east = 456
-west = 123
+max-dispersal-radius = 5 # in cell widths
+# Initial bounding rectangle in grid coordinates
+initial-rectangle = 123, 456, 500, 700 # xmin, xmax, ymin, ymax
 
-# Second species
-niche = 23, 34
+# Second species. Set the niche centre from a random cell in the
+# landscape and start by populating a random rectangle around that cell.
+niche-centre = random-cell
 niche-breadth = 2, 4
-max-dispersal-radius = 5
-north = 789
-south = 567
-east = 456
-west = 123
+max-dispersal-radius = 5 # in cell widths
+# Initial random bounding rectangle
+initial-rectangle = random, 2, 3 # min and max side lengths in cell widths
