--- a/examples/example.conf
+++ b/examples/example.conf
@@ -33,6 +33,10 @@ gene-flow-max-distance = 5  # gene-space distance where gene flow probability dr
 niche-evolution-rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
 dispersal-min = 0.2 # dispersal at max dispersal distance
 output-file-prefix = out # output filenames start with this
+check-speciation = 1 # Time steps between speciation checks.
+                     # Speciation checking can be slow for large
+                     # populations. Use 0 to disable, 1 to check on
+                     # every step, 2 for every 2nd step etc.
 
 [env]
 # First environment dimension (e.g. temperature).
