--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required (VERSION 3.0)
+cmake_minimum_required (VERSION 3.8)
 project(dreadds)
 find_package (Boost 1.64
   COMPONENTS program_options filesystem REQUIRED)
@@ -8,9 +8,22 @@ include_directories(${Boost_INCLUDE_DIR} ${GDAL_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+enable_testing()
+add_subdirectory(test)
+
 add_library(dreadds STATIC
   model-config.cpp deme.cpp environment.cpp env-params.cpp
-  output-file.cpp model.cpp simulation.cpp  species.cpp)
+  output-file.cpp model.cpp simulation.cpp  species.cpp
+  alglib/alglibinternal.cpp
+  alglib/dataanalysis.cpp
+  alglib/solvers.cpp
+  alglib/alglibmisc.cpp
+  alglib/linalg.cpp
+  alglib/specialfunctions.cpp
+  alglib/ap.cpp
+  alglib/optimization.cpp
+  alglib/statistics.cpp
+)
 target_link_libraries(dreadds
   ${GDAL_LIBRARY}
   Boost::program_options
@@ -29,4 +42,5 @@ target_link_libraries(grids2tsv
   dreadds
   ${GDAL_LIBRARY})
 
-set_property(TARGET grids2tsv dreadds dreadds-bin PROPERTY CXX_STANDARD 11)
+set_property(TARGET grids2tsv dreadds dreadds-bin
+             PROPERTY CXX_STANDARD 11)
