Refactoring in preparation for better R API

--- a/src/test/1/test.conf
+++ b/src/test/1/test.conf
@@ -32,10 +32,11 @@ max-dispersal-radius = 5 # in cell widths
 # Initial bounding rectangle in grid coordinates
 initial-rectangle = 123, 456, 500, 700 # xmin, xmax, ymin, ymax
 
-# Second species. Set the niche centre from a random cell in the
-# landscape and start by populating a random rectangle around that cell.
-niche-centre = random-cell
+# Second species.
+#niche-centre = random-cell  # Set the niche centre from a random cell
+niche-centre = 23, 240 # one value for each environment layer or 'random-cell'
 niche-breadth = 2, 4
-max-dispersal-radius = 5 # in cell widths
+max-dispersal-radius = 6 # in cell widths
 # Initial random bounding rectangle
-initial-rectangle = random, 2, 3 # min and max side lengths in cell widths
+# initial-rectangle = random, 2, 3 # min and max side lengths in cell widths
+initial-rectangle = 200, 550, 500, 700 # xmin, xmax, ymin, ymax
