--- a/examples/example.conf
+++ b/examples/example.conf
@@ -1,30 +1,31 @@
 ### Example config file
 #
+# For a comprehensive list of all available configuration options and
+# their meanings, build the dreadds executable (see ../src/README.md) and
+# run
+#	dreadds -h
+#
+# This config file is parsed by the Boost program_options library. See
+# https://www.boost.org/doc/libs/1_68_0/doc/html/program_options/overview.html#id-1.3.31.5.10.2
+#
 # Comments are prefixed with a #-character and can be inserted anywhere.
 #
 # key=value specifies a value for an option, equivalent to the
 # command-line argument --key=value
 #
-# [something] starts a section.
+# [something] starts a section. Within a section you can repeat sets
+# of its constituent options as many times as needed in order to define
+# the required number of environment variables, species etc.
 #
 # Below a [section], key=value is equivalent to the command line
 # syntax --section.key=value.
 #
-# Options can be specified in any order. This includes those options
-# that are used to specify repeatable sets of values in a section,
-# such as [env] or [species]. For these cases, ordinal correspondence
-# of the repeatable options is used to form each set. In other words,
-# the nth set is constructed from the nth occurrences of its
-# constituent options. In order to maintain readability, it's probably
-# best to group each set together as shown below.
-#
-# Options on the command line override those in the config file. For
-# options that can be repeated, the entire list is overridden.
-#
 # Leading and trailing whitespace is stripped from both keys and values.
-# There is no quoting syntax, thus no way to specify a literal
-# #-character, nor explicit leading or trailing spaces. See
-# https://www.boost.org/doc/libs/1_68_0/doc/html/program_options/overview.html#id-1.3.31.5.10.2
+#
+# NOTE: There is no quoting syntax, thus no way to specify a literal
+# #-character, nor explicit leading or trailing spaces. Also note that
+# shell metacharacters such as ~ and $ are also interpreted literally.
+
 
 verbosity = 2 # verbosity of log output. 0 = quiet, max = 3. Default = 1
 
