--- a/src/test/1/test.conf
+++ b/src/test/1/test.conf
@@ -8,6 +8,7 @@ gene-flow-max-distance = 5  # gene-space distance where gene flow probability dr
 niche-evolution-rate = 0.02 # niche drift towards niche centre per time step as fraction 0…1
 dispersal-min = 0.2 # dispersal at max dispersal distance
 output-file-prefix = out # output filenames start with this
+random-seed = -123 # for reproducible tests
 
 [env]
 mode = ex # extrapolate from base environment
